<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="home_tab_name">Home</string>
    <string name="animals_tab_name">Animals</string>
    <string name="activities_tab_name">Activities</string>
    <string name="restaurants_tab_name">Restaurants</string>
    <string name="shops_tab_name">Shops</string>
    <string name="activity_name">Activity Name</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="location">Location</string>
    <string name="hours">Hours</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_location">Location</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="zoo_hours">Hours</string>
    <string name="act_one">Balboa Park Miniature Train</string>
    <string name="act_one_times">11 AM - 6:30 PM</string>
    <string name="act_one_price">$3 for ages 1 and older; free if younger than age 1</string>
    <string name="act_two">Skyfari Aerial Tram</string>
    <string name="act_two_times">10 AM - 9 PM</string>
    <string name="act_two_price">Free</string>
    <string name="animal_one">Artic Fox</string>
    <string name="animal_one_location">Zoo Location: Northern Frontier</string>
    <string name="animal_one_status">Conservation Status: Stable</string>
    <string name="animal_two">Giant Panda</string>
    <string name="animal_two_location">Zoo Location: Panda Canyon</string>
    <string name="animal_two_status">Conservation Status: Threatened</string>
    <string name="homepg_place_name">San Diego Zoo</string>
    <string name="homepg_place_address">2920 Zoo Dr, San Diego, CA 92101</string>
    <string name="homepg_hrs_start">Hours:\n</string>
    <string name="homepg_hrs_sunday">Sunday\t9AM–9PM\n</string>
    <string name="homepg_hrs_monday">Monday\t9AM–9PM\n</string>
    <string name="homepg_hrs_tuesday">Tuesday\t9AM–9PM\n</string>
    <string name="homepg_hrs_wednesday">Wednesday\t9AM–9PM\n</string>
    <string name="homepg_hrs_thursday">Thursday\t9AM–9PM\n</string>
    <string name="homepg_hrs_friday">Friday\t9AM–9PM\n</string>
    <string name="homepg_hrs_saturday">Saturday\t9AM–9PM</string>
    <string name="rest_one_name">Albert\'s</string>
    <string name="rest_one_location">Location: Lost Forest</string>
    <string name="rest_one_weekday_hrs">Monday through Friday, 11 AM to 7:30 PM</string>
    <string name="rest_one_weekend_hrs">Saturday and Sunday, 10 AM to 7:30 PM</string>
    <string name="rest_two_name">Sabertooth Grill</string>
    <string name="rest_two_location">Location: Elephant Odyssey</string>
    <string name="rest_two_hrs">Opens at 10:30 AM</string>
    <string name="shop_one_name">San Diego Zoo Kids Store</string>
    <string name="shop_one_location">Location: Front Street</string>
    <string name="shop_two_name">Zootique</string>
    <string name="shop_two_location">Location: Front Street</string>
</resources>
