<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for single restaurant item in Restaurants tab -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/restaurant_name"
        style="@style/textViewAttributes"
        android:text="@string/restaurant_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/restaurant_location"
        style="@style/textViewAttributes"
        android:paddingLeft="30dp"
        android:text="@string/location"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/restaurant_hours"
        style="@style/textViewAttributes"
        android:paddingLeft="30dp"
        android:text="@string/hours"
        android:textSize="16sp" />

</LinearLayout>