<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for home tab -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/home_pg_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/home_pg_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/description"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/home_pg_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/address"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/home_pg_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoo_hours"
        android:textSize="12dp" />

</LinearLayout>